--- a/app/product-page.html
+++ b/app/product-page.html
@@ -231,6 +231,78 @@
   </section>
   <!-- === / PRODUCT-CARD === -->
 
+  <!-- === PRODUCT-CARD-TABS === -->
+  <section class="product-card-tabs__tabs">
+    <div class="container">
+      <div class="tabs-wrapper">
+        <div class="tabs">
+          <a class="product-card-tabs__tab tab" href="#about">
+            О товаре
+          </a>
+          <a class="product-card-tabs__tab tab" href="#characteristics">
+            Характеристики
+          </a>
+          <a class="product-card-tabs__tab tab" href="#testimonials">
+            Отзывы
+          </a>
+          <a class="product-card-tabs__tab tab tab--active" href="#pickup">
+            Самовывоз
+          </a>
+          <a class="product-card-tabs__tab tab" href="#delivery">
+            Доставка
+          </a>
+          <a class="product-card-tabs__tab tab" href="#service">
+            Cервис
+          </a>
+          <a class="product-card-tabs__tab tab" href="#guaranty">
+            Гарантия
+          </a>
+        </div>
+        <div class="tabs-container">
+          <div class="product-card-tabs__content tabs-content" id="about">
+            О товаре [content]
+          </div>
+          <div class="product-card-tabs__content tabs-content" id="characteristics">
+            Характеристики [content]
+          </div>
+          <div class="product-card-tabs__content tabs-content" id="testimonials">
+            Отзывы [content]
+          </div>
+          <div class="product-card-tabs__content tabs-content tabs-content--active" id="pickup">
+            <form>
+              <div class="product-card-tabs__top-line">
+                <label class="product-card-tabs__label-search">
+                  Магазин
+                  <input class="product-card-tabs__search" type="search">
+                </label>
+                <label>
+                  <input type="radio" name="radio">
+                  Забрать сегодня
+                </label>
+                <label>
+                  <input type="radio" name="radio">
+                  Забрать в течение недели
+                </label>
+              </div>
+            </form>
+          </div>
+          <div class="product-card-tabs__content tabs-content" id="delivery">
+            Доставка [content]
+          </div>
+          <div class="product-card-tabs__content tabs-content" id="service">
+            Cервис [content]
+          </div>
+          <div class="product-card-tabs__content tabs-content" id="guaranty">
+            Гарантия [content]
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- === / PRODUCT-CARD-TABS === -->
+
+
+
   <!-- === FOOTER === -->
   <footer class="footer">
     <div class="container">
