--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,11 @@
       <div class="container">
         <div class="header__top-inner">
           <nav class="menu">
+            <button class="menu__btn">
+              <div class="menu__btn-line"></div>
+              <div class="menu__btn-line"></div>
+              <div class="menu__btn-line"></div>
+            </button>
             <ul class="menu__list">
               <li class="menu__item">
                 <a class="menu__link" href="#">Магазины</a>
@@ -59,6 +64,113 @@
         </div>
       </div>
     </div>
+    <ul class="menu__mobile-list">
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <img class="menu__mobile-list-icon" src="images/icons/person.svg" alt="">
+          <p>Войти</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <img class="menu__mobile-list-icon" src="images/icons/person.svg" alt="">
+          <p>Регистрация</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <img class="menu__mobile-list-icon" src="images/icons/favorite.svg" alt="">
+          <p>Избранное</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <img class="menu__mobile-list-icon" src="images/icons/cart.svg" alt="">
+          <p>Корзина</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <img class="menu__mobile-list-icon" src="images/icons/house.svg" alt="">
+          <p>Магазины</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <img class="menu__mobile-list-icon" src="images/icons/percent.svg" alt="">
+          <p>Акции</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <img class="menu__mobile-list-icon" src="images/icons/delivery-box.svg" alt="">
+          <p>Доставка и оплата</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Квадроциклы</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Катера</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Гидроциклы</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Лодки</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Вездеходы</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Снегоходы</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Двигатели</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Запчасти</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <address class="menu__mobile-address">
+          Москва, ул. Науки 25
+        </address>
+      </li>
+      <button class="menu__btn">
+        <div class="menu__btn-line"></div>
+        <div class="menu__btn-line"></div>
+        <div class="menu__btn-line"></div>
+      </button>
+    </ul>
+    <div class="menu__mobile-line-wrapper">
+      <ul class="menu__mobile-line">
+        <li class="menu__item">
+          <a class="menu__link" href="#">Магазины</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="catalogue.html">Акции</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#">Доставка и оплата</a>
+        </li>
+      </ul>
+    </div>
     <div class="header__bottom">
       <div class="container">
         <div class="header__bottom-inner">
@@ -95,7 +207,7 @@
   <!-- === / HEADER === -->
 
   <!-- === BANNER-SECTION === -->
-  <section class="banner-section page-section">
+  <!-- <section class="banner-section page-section">
     <div class="container">
       <div class="banner-section__inner">
         <div class="banner-section__slider">
@@ -137,11 +249,11 @@
         </a>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- === / BANNER-SECTION === -->
 
   <!-- === SEARCH === -->
-  <div class="search page-section">
+  <!-- <div class="search page-section">
     <div class="container">
       <div class="search__inner">
         <div class="search__tabs">
@@ -171,11 +283,11 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- === / SEARCH === -->
 
   <!-- === CATEGORIES === -->
-  <section class="categories">
+  <!-- <section class="categories">
     <div class="container">
       <div class="categories__inner">
         <a class="categories__item" href="#">
@@ -234,11 +346,11 @@
         </a>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- === / CATEGORIES === -->
 
   <!-- === PRODUCTS === -->
-  <section class="products">
+  <!-- <section class="products">
     <div class="container">
       <div class="products__inner">
         <h3 class="products__title">Популярные товары</h3>
@@ -640,21 +752,21 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- === / PRODUCTS === -->
 
   <!-- === BANNER === -->
-  <div class="banner page-section">
+  <!-- <div class="banner page-section">
     <div class="container">
       <a class="banner-link" href="#">
         <img class="banner-image" src="images/content/banner.jpg" alt="рекламный баннер">
       </a>
     </div>
-  </div>
+  </div> -->
   <!-- === / BANNER === -->
 
   <!-- === PRODUCTS-POPULAR === -->
-  <section class="products">
+  <!-- <section class="products">
     <div class="container">
       <div class="products__inner">
         <h3 class="products__title">С этим товаром покупают</h3>
@@ -669,7 +781,7 @@
           </div>
           <div class="tabs-container products__container">
             <!-- tab: запчасти -->
-            <div id="popular-tab-1" class="tabs-content products__content tabs-content--active">
+  <!-- <div id="popular-tab-1" class="tabs-content products__content tabs-content--active">
               <div class="products-slider">
 
                 <div class="products-slider__item">
@@ -848,11 +960,11 @@
                 </div>
 
               </div>
-            </div>
-            <!-- / tab: запчасти -->
+            </div> -->
+  <!-- / tab: запчасти -->
 
-            <!-- tab: моторы -->
-            <div id="popular-tab-2" class="tabs-content products__content">
+  <!-- tab: моторы -->
+  <!-- <div id="popular-tab-2" class="tabs-content products__content">
               <div class="products-slider">
 
                 <div class="products-slider__item">
@@ -1031,22 +1143,24 @@
                 </div>
 
               </div>
-            </div>
-            <!-- / tab: моторы -->
+            </div> -->
+  <!-- / tab: моторы -->
 
-          </div> <!-- /.tabs-container products__container -->
-        </div> <!-- /.tabs-wrapper -->
-        <div id="popular-tab-3" class="tabs-content products__content">slider-3</div>
+  <!-- </div> -->
+  <!-- /.tabs-container products__container -->
+  <!-- </div> -->
+  <!-- /.tabs-wrapper -->
+  <!-- <div id="popular-tab-3" class="tabs-content products__content">slider-3</div>
         <div id="popular-tab-4" class="tabs-content products__content">slider-4</div>
         <div id="popular-tab-5" class="tabs-content products__content">slider-5</div>
         <div id="popular-tab-6" class="tabs-content products__content">slider-6</div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- === / PRODUCTS-POPULAR === -->
 
   <!-- === FOOTER === -->
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="container">
       <div class="footer__top">
         <div class="footer__top-inner">
@@ -1209,7 +1323,7 @@
         </a>
       </div>
     </div>
-  </footer>
+  </footer> -->
   <!-- === / FOOTER === -->
 
   <!-- === JAVASCRIPT === -->
