--- a/app/product-page.html
+++ b/app/product-page.html
@@ -30,7 +30,7 @@
               </li>
             </ul>
           </nav>
-          <a class="logo" href="#">
+          <a class="logo" href="index.html">
             <img class="logo__img" src="images/logo.svg" alt="логотип">
           </a>
           <div class="header__box">
