@media for index.html banner-section

--- a/app/index.html
+++ b/app/index.html
@@ -207,7 +207,7 @@
   <!-- === / HEADER === -->
 
   <!-- === BANNER-SECTION === -->
-  <!-- <section class="banner-section page-section">
+  <section class="banner-section page-section">
     <div class="container">
       <div class="banner-section__inner">
         <div class="banner-section__slider">
@@ -249,7 +249,7 @@
         </a>
       </div>
     </div>
-  </section> -->
+  </section>
   <!-- === / BANNER-SECTION === -->
 
   <!-- === SEARCH === -->
