@media for categories

--- a/app/index.html
+++ b/app/index.html
@@ -253,14 +253,17 @@
   <!-- === / BANNER-SECTION === -->
 
   <!-- === SEARCH === -->
-  <!-- <div class="search page-section">
+  <div class="search page-section">
     <div class="container">
       <div class="search__inner">
-        <div class="search__tabs">
-          <a class="tab search__tabs-item tab--active" href="#tab-1">Поиск по номеру</a>
-          <a class="tab search__tabs-item" href="#tab-2">Поиск по марке</a>
-          <a class="tab search__tabs-item" href="#tab-3">Поиск по названию товара</a>
+        <div class="search__tabs tabs-wrapper">
+          <div class="mobile-overflow">
+            <a class="tab search__tabs-item tab--active" href="#tab-1">Поиск по номеру</a>
+            <a class="tab search__tabs-item" href="#tab-2">Поиск по марке</a>
+            <a class="tab search__tabs-item" href="#tab-3">Поиск по названию товара</a>
+          </div>
         </div>
+
         <div class="search__content">
           <div id="tab-1" class="tabs-content search__content-item tabs-content--active">
             <form class="search__content-form">
@@ -283,11 +286,11 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
   <!-- === / SEARCH === -->
 
   <!-- === CATEGORIES === -->
-  <!-- <section class="categories">
+  <section class="categories">
     <div class="container">
       <div class="categories__inner">
         <a class="categories__item" href="#">
@@ -346,7 +349,7 @@
         </a>
       </div>
     </div>
-  </section> -->
+  </section>
   <!-- === / CATEGORIES === -->
 
   <!-- === PRODUCTS === -->
