--- a/app/product-page.html
+++ b/app/product-page.html
@@ -18,19 +18,24 @@
       <div class="container">
         <div class="header__top-inner">
           <nav class="menu">
+            <button class="menu__btn">
+              <div class="menu__btn-line"></div>
+              <div class="menu__btn-line"></div>
+              <div class="menu__btn-line"></div>
+            </button>
             <ul class="menu__list">
               <li class="menu__item">
                 <a class="menu__link" href="#">Магазины</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="#">Акции</a>
+                <a class="menu__link" href="catalogue.html">Акции</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="#">Доставка и оплата</a>
               </li>
             </ul>
           </nav>
-          <a class="logo" href="index.html">
+          <a class="logo" href="#">
             <img class="logo__img" src="images/logo.svg" alt="логотип">
           </a>
           <div class="header__box">
@@ -58,6 +63,113 @@
           </div>
         </div>
       </div>
+    </div>
+    <ul class="menu__mobile-list">
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <img class="menu__mobile-list-icon" src="images/icons/person.svg" alt="">
+          <p>Войти</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <img class="menu__mobile-list-icon" src="images/icons/person.svg" alt="">
+          <p>Регистрация</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <img class="menu__mobile-list-icon" src="images/icons/favorite.svg" alt="">
+          <p>Избранное</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <img class="menu__mobile-list-icon" src="images/icons/cart.svg" alt="">
+          <p>Корзина</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <img class="menu__mobile-list-icon" src="images/icons/house.svg" alt="">
+          <p>Магазины</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <img class="menu__mobile-list-icon" src="images/icons/percent.svg" alt="">
+          <p>Акции</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <img class="menu__mobile-list-icon" src="images/icons/delivery-box.svg" alt="">
+          <p>Доставка и оплата</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Квадроциклы</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Катера</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Гидроциклы</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Лодки</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Вездеходы</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Снегоходы</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Двигатели</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <a class="menu__mobile-link" href="#">
+          <p>Запчасти</p>
+        </a>
+      </li>
+      <li class="menu__mobile-item">
+        <address class="menu__mobile-address">
+          Москва, ул. Науки 25
+        </address>
+      </li>
+      <button class="menu__btn">
+        <div class="menu__btn-line"></div>
+        <div class="menu__btn-line"></div>
+        <div class="menu__btn-line"></div>
+      </button>
+    </ul>
+    <div class="menu__mobile-line-wrapper">
+      <ul class="menu__mobile-line">
+        <li class="menu__item">
+          <a class="menu__link" href="#">Магазины</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="catalogue.html">Акции</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#">Доставка и оплата</a>
+        </li>
+      </ul>
     </div>
     <div class="header__bottom">
       <div class="container">
@@ -94,27 +206,31 @@
   </header>
   <!-- === / HEADER === -->
 
+  <!-- === BREADCRUMBS === -->
   <div class="breadcrumbs">
     <div class="container">
-      <ul class="breadcrumbs__list">
-        <li class="breadcrumbs__list-item">
-          <a href="#">
-            Главная
-          </a>
-        </li>
-        <li class="breadcrumbs__list-item">
-          <a href="#">
-            Гидроциклы
-          </a>
-        </li>
-        <li class="breadcrumbs__list-item">
-          <span>
-            Гидроцикл BRP SeaDoo GTI 155hp SE Long Blue Metallic
-          </span>
-        </li>
-      </ul>
+      <div class="breadcrumbs__inner">
+        <ul class="breadcrumbs__list mobile-overflow">
+          <li class="breadcrumbs__list-item">
+            <a href="#">
+              Главная
+            </a>
+          </li>
+          <li class="breadcrumbs__list-item">
+            <a href="#">
+              Гидроциклы
+            </a>
+          </li>
+          <li class="breadcrumbs__list-item">
+            <span>
+              Гидроцикл BRP SeaDoo GTI 155hp SE Long Blue Metallic
+            </span>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
+  <!-- === / BREADCRUMBS === -->
 
   <!-- === PRODUCT-CARD === -->
   <section class="product-card">
@@ -857,8 +973,8 @@
               </button>
             </form>
           </div>
-          <div class="footer__top-item">
-            <h6 class="footer__top-title">
+          <div class="footer__top-item footer__item-accordion">
+            <h6 class="footer__top-title footer__title-accordion">
               Информация
             </h6>
             <ul class="footer__list">
@@ -884,8 +1000,8 @@
               </li>
             </ul>
           </div>
-          <div class="footer__top-item">
-            <h6 class="footer__top-title">
+          <div class="footer__top-item footer__item-accordion">
+            <h6 class="footer__top-title footer__title-accordion">
               Интернет-магазин
             </h6>
             <ul class="footer__list">
