--- a/app/index.html
+++ b/app/index.html
@@ -230,8 +230,8 @@
             <img class="banner-section__slider-img" src="images/banner-slider.jpg" alt="картинка слайдера №6">
           </a>
         </div>
-        <a class="banner-section__item sale-item" href="#">
-          <div class="sale-item__top">
+        <a class="banner-section__item sale-item" href="product-page.html">
+          <div class=" sale-item__top">
             <p class="sale-item__info">акция</p>
             <div class="sale-item__price">
               <div class="price sale-item__price-new">199 900</div>
