Fix (html, gulpfile) Several fixes to migrate project on a new Gulp-package

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
   <title>Drive Moto</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -296,7 +297,7 @@
         <a class="categories__item" href="#">
           <div class="categories__item-info">
             <h4 class="categories__item-title">Квадроциклы</h4>
-            <p class="categories__item-text">Подробее</p>
+            <p class="categories__item-text">Подробнее</p>
           </div>
           <div class="categories__item-images">
             <img src="images/quadrocycles.png" alt="изображение категории Квадроциклы">
@@ -305,7 +306,7 @@
         <a class="categories__item" href="#">
           <div class="categories__item-info">
             <h4 class="categories__item-title">Гидроциклы</h4>
-            <p class="categories__item-text">Подробее</p>
+            <p class="categories__item-text">Подробнее</p>
           </div>
           <div class="categories__item-images">
             <img src="images/jetski.png" alt="изображение категории Гидроциклы">
@@ -314,7 +315,7 @@
         <a class="categories__item" href="#">
           <div class="categories__item-info">
             <h4 class="categories__item-title">Катера</h4>
-            <p class="categories__item-text">Подробее</p>
+            <p class="categories__item-text">Подробнее</p>
           </div>
           <div class="categories__item-images">
             <img src="images/motorboats.png" alt="изображение категории Катера">
@@ -323,7 +324,7 @@
         <a class="categories__item" href="#">
           <div class="categories__item-info">
             <h4 class="categories__item-title">Снегоходы</h4>
-            <p class="categories__item-text">Подробее</p>
+            <p class="categories__item-text">Подробнее</p>
           </div>
           <div class="categories__item-images">
             <img src="images/snowmobile.png" alt="изображение категории Снегоходы">
@@ -332,7 +333,7 @@
         <a class="categories__item" href="#">
           <div class="categories__item-info">
             <h4 class="categories__item-title">Вездеходы</h4>
-            <p class="categories__item-text">Подробее</p>
+            <p class="categories__item-text">Подробнее</p>
           </div>
           <div class="categories__item-images">
             <img src="images/buggys.png" alt="изображение категории Вездеходы">
@@ -341,7 +342,7 @@
         <a class="categories__item" href="#">
           <div class="categories__item-info">
             <h4 class="categories__item-title">Двигатели</h4>
-            <p class="categories__item-text">Подробее</p>
+            <p class="categories__item-text">Подробнее</p>
           </div>
           <div class="categories__item-images">
             <img src="images/engines.png" alt="изображение категории Двигатели">
@@ -585,7 +586,7 @@
                   <a class="products-item products-item--sale" href="#">
                     <p class="products-item__hover-text">посмотреть товар</p>
                     <div class="products-item__img-box">
-                      <img class="products-item__img" src="images/content/product-1.png"
+                      <img class="products-item__img" src="images/content/brp-mens-airflow-pfd.png"
                         alt="изображение артикля магазина">
                     </div>
                     <h4 class="products-item__title">Спасательный жилет BRP Men's Airflow PFD
@@ -606,7 +607,7 @@
                   <a class="products-item" href="#">
                     <p class="products-item__hover-text">посмотреть товар</p>
                     <div class="products-item__img-box">
-                      <img class="products-item__img" src="images/content/product-1.png"
+                      <img class="products-item__img" src="images/content/brp-audio-premium-system.png"
                         alt="изображение артикля магазина">
                     </div>
                     <h4 class="products-item__title">
@@ -627,7 +628,7 @@
                   <a class="products-item" href="#">
                     <p class="products-item__hover-text">посмотреть товар</p>
                     <div class="products-item__img-box">
-                      <img class="products-item__img" src="images/content/product-1.png"
+                      <img class="products-item__img" src="images/content/rescue-set.png"
                         alt="изображение артикля магазина">
                     </div>
                     <h4 class="products-item__title">Спасательное
@@ -648,7 +649,7 @@
                   <a class="products-item products-item--sale" href="#">
                     <p class="products-item__hover-text">посмотреть товар</p>
                     <div class="products-item__img-box">
-                      <img class="products-item__img" src="images/content/product-1.png"
+                      <img class="products-item__img" src="images/content/waterproof-backpack.png"
                         alt="изображение артикля магазина">
                     </div>
                     <h4 class="products-item__title">Водонепроницаемый
@@ -669,7 +670,7 @@
                   <a class="products-item products-item--sale" href="#">
                     <p class="products-item__hover-text">посмотреть товар</p>
                     <div class="products-item__img-box">
-                      <img class="products-item__img" src="images/content/product-1.png"
+                      <img class="products-item__img" src="images/content/waterproof-backpack.png"
                         alt="изображение артикля магазина">
                     </div>
                     <h4 class="products-item__title">Водонепроницаемый
@@ -690,7 +691,7 @@
                   <a class="products-item products-item--sale" href="#">
                     <p class="products-item__hover-text">посмотреть товар</p>
                     <div class="products-item__img-box">
-                      <img class="products-item__img" src="images/content/product-1.png"
+                      <img class="products-item__img" src="images/content/waterproof-backpack.png"
                         alt="изображение артикля магазина">
                     </div>
                     <h4 class="products-item__title">Водонепроницаемый
@@ -711,7 +712,7 @@
                   <a class="products-item products-item--sale" href="#">
                     <p class="products-item__hover-text">посмотреть товар</p>
                     <div class="products-item__img-box">
-                      <img class="products-item__img" src="images/content/product-1.png"
+                      <img class="products-item__img" src="images/content/waterproof-backpack.png"
                         alt="изображение артикля магазина">
                     </div>
                     <h4 class="products-item__title">Водонепроницаемый
@@ -732,7 +733,7 @@
                   <a class="products-item products-item--sale" href="#">
                     <p class="products-item__hover-text">посмотреть товар</p>
                     <div class="products-item__img-box">
-                      <img class="products-item__img" src="images/content/product-1.png"
+                      <img class="products-item__img" src="images/content/waterproof-backpack.png"
                         alt="изображение артикля магазина">
                     </div>
                     <h4 class="products-item__title">Водонепроницаемый
@@ -1330,13 +1331,14 @@
   <!-- === / FOOTER === -->
 
   <!-- === JAVASCRIPT === -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
   <script src="js/vendor/ion.rangeSlider.min.js"></script>
-  <script src="js/vendor/jquery.formstyler.min.js"></script>
-
+  <script src="js/vendor/jquery.formstyler.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
   <script src="js/main.min.js"></script>
   <!-- === / JAVASCRIPT === -->
 
